traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:19: error: ')' expected but ';' found.
def versDroite(x:Int;y:Int) {
                    ^TraversalZigZag:19: error: ';' expected but ')' found.
def versDroite(x:Int;y:Int) {
                          ^